--- a/kinematics/inverse_kinematics_2d_jax.ipynb
+++ b/kinematics/inverse_kinematics_2d_jax.ipynb
@@ -15,7 +15,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'jax'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPython\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m display\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mipywidgets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m interact, fixed\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjax\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mjax\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m grad, jit\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'jax'"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib notebook\n",
     "from matplotlib import pylab as plt\n",
@@ -1032,9 +1044,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:robocup]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-robocup-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1046,7 +1058,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.0"
   },
   "widgets": {
    "state": {
